test/files/neg/t4701.check
t4701.scala:9: error: type mismatch;
 found   : Int(1)
 required: String
  hasType[HL[String]](nnn :: HN) // type mismatch error should have position at `nnn`
                      ^
1 error
